# tttc_practice

./: main  test  test.c
my_clang_plugin/: CMakeLists.txt  RenamePrefixPlugin.cpp
my_clang_plugin_build/: CMakeCache.txt  Makefile  cmake_install.cmake
